@@ -100,7 +100,10 @@ set mail-format { from: monit@7pi.eu }
 #
 set alert monit@7pi.eu                           # receive all alerts
 # set alert manager@foo.bar only on { timeout }  # receive just service-
+#    and register without credentials     # Don't register credentials
 #                                                # timeout alert
+set slack {{slack_webhook}}
+    and register without credentials     # Don't register credentials
 #
 #
 ## Monit has an embedded web server which can be used to view status of 
@@ -109,9 +112,9 @@ set alert monit@7pi.eu                           # receive all alerts
 #
 set httpd port {{monit_port}} and
     use address localhost  # only accept connection from localhost
-    allow 192.168.1.9      # allow localhost to connect to the server and
-    allow 192.168.1.9      # allow localhost to connect to the server and
     allow localhost      # allow localhost to connect to the server and
+    allow {{monit_host}}   # allow localhost to connect to the server and
+    allow 192.168.1.9      # allow localhost to connect to the server and
     allow {{monit_username}}:{{monit_password}}
                            # require user 'admin' with password 'monit'
     allow @monit           # allow users of group 'monit' to connect (rw)
