@@ -1,5 +1,5 @@
 # {{ansible_managed}}
- check process rsyslogd with pidfile /var/run/rsyslogd.pid
+ check process rsyslog with pidfile /var/run/rsyslogd.pid
    group adm
    start program = "/etc/init.d/rsyslog start"
    stop  program = "/etc/init.d/rsyslog stop"
